<resources>
    <string name="app_name">XP</string>
    <string name="app_desc">This is an esports quiz app</string>

    <!-- Home Page Strings -->
    <string name="welcome">Welcome to XP</string>
    <string name="welcome_sub">The worlds best Esport`s Quiz</string>
    <string name="info">You Know Your Esports?</string>
    <string name="info_sub">Test your knowledge now and gain XP</string>

    <!-- Button Strings -->
    <string name="next">Next</string>
    <string name="restart">Start Over</string>

    <!-- Setting Strings-->
    <string name="goBack">Go Back</string>
    <string name="settingsHead">Settings</string>
    <string name="settingsSubHead">Reset your highscore or read some information about the app here</string>
    <string name="aboutAppHead">What is XP?</string>
    <string name="aboutApp">Welcome to XP! A esports quiz app I developed, that quizzes users on everything relating to esports and its respective games.</string>
    <string name="aboutApp2">XP has categories from esports all over the esports scene. Anything from Counter Strike, League of Legends all the way up to new titles like Valorant.</string>
    <string name="aboutMe">Hi, my name is Wiaan Duvenhage! \n I am a 2nd year full-stack developer student \n at The Open Window.</string>
    <string name="aboutMe2">What do you think about XP? I hope you enjoyed playing the game and learned something about esports from different games.</string>
    <string name="resetScores">Reset Score</string>
    <string name="currHighScore">Current Highscore</string>
    <string name="none">None</string>
    <string name="theDev">The Developer</string>
    <string name="imgCaption">This is me</string>
    <string name="github">WiaanDuvenhage-200307</string>

    <!-- Modal String -->
    <string name="dialogHeading">Current Highscore</string>

</resources>