<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    android:background="@drawable/ic_activity_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goBack"
            android:textAllCaps="false"
            android:fontFamily="@font/ralewayregular"
            app:icon="@drawable/ic_arrow_left"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/settingsHead"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/ralewayregular"
            android:textColor="@color/white"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginBottom="40dp"
            android:text="@string/settingsSubHead"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:text="@string/resetScores"
            android:layout_gravity="center"
            android:fontFamily="@font/ralewayregular"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currHighScore"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/ralewaybold"
            android:textSize="24sp"
            android:background="@color/red_tint"/>

        <TextView
            android:id="@+id/tv_highScoreHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:text="@string/none"
            android:gravity="center"
            android:fontFamily="@font/ralewayregular"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tv_highScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:paddingBottom="10dp"
            android:textSize="28sp"
            android:text="@string/none"
            android:gravity="center"
            android:fontFamily="@font/ralewaybold"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutAppHead"
            android:fontFamily="@font/ralewaybold"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:paddingStart="30sp"
            android:paddingEnd="30sp"
            android:layout_marginBottom="23dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutApp"
            android:fontFamily="@font/ralewayregular"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutApp2"
            android:fontFamily="@font/ralewayregular"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theDev"
            android:fontFamily="@font/ralewaybold"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:paddingStart="30sp"
            android:paddingEnd="30sp"
            android:layout_marginBottom="23dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutMe"
            android:fontFamily="@font/ralewayregular"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutMe2"
            android:fontFamily="@font/ralewayregular"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/me"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ralewayregular"
            android:textColor="@color/white"
            android:text="@string/imgCaption"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:id="@+id/ll_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/github"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:layout_gravity="center"
                android:fontFamily="@font/ralewaybold"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="version 1.0"
            android:gravity="center"
            android:fontFamily="@font/ralewayregular"
            android:textColor="@color/red"
            android:layout_marginBottom="20dp"/>




    </LinearLayout>




</ScrollView>