<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeActivity"
    android:background="@color/black">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:background="@drawable/fadelogo" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102sp"
        android:fontFamily="@font/ralewaybold"
        android:paddingLeft="30sp"
        android:text="@string/welcome"
        android:textColor="@color/red"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/subtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:fontFamily="@font/ralewayregular"
        android:paddingLeft="30sp"
        android:text="@string/welcome_sub"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="30sp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="74sp">

            <ImageView
                android:id="@+id/btn_settings"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:padding="16sp"
                android:src="@drawable/settings" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="90sp"
        android:layout_below="@+id/subtext"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="97dp"
        android:layout_marginRight="20sp"
        android:background="@drawable/organicshape"
        android:orientation="vertical"
        android:paddingLeft="30sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="0sp">


        <TextView
            android:id="@+id/greetheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/info"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/greetsubtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/greetheading"
            android:fontFamily="@font/ralewayregular"
            android:text="@string/info_sub"
            android:textColor="@color/white"
            android:textSize="14dp" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30sp"
        android:hint="Username"
        android:textColorHint="@color/white"
        android:layout_marginTop="350sp"
        android:id="@+id/nameInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtext"
            android:layout_marginTop="40sp"
            android:fontFamily="@font/ralewayregular"
            android:inputType="text"
            android:textColor="@color/white"
            android:background="@drawable/border"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="150sp"
        android:layout_height="80sp"
        android:layout_below="@+id/nameInput"
        android:fontFamily="@font/ralewayregular"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:id="@+id/button"/>



</RelativeLayout>